--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -111,61 +111,24 @@
                 </div><!-- end-row -->
 				
 				<br class="clear">
-		<!--
-		<div>
-             <div id="green" class="box">Go!</div>
-             <div id="red" class="box">Go!</div>
-        </div>
-		<div id="container">
-            <img class="logo" src="./img/flexy-logo.png">
-            <!-- <div id="header">
-                <!-- <h1>StarTrackr!</h1> --
-                <div class="row">
-                    <div class="col-12">
-				        <header data-role="header" class="data" id="html5-ch1-7header">
-                                <!-- <div id="hdr"> changed to <header> --
-                                <hgroup>
-                                    <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit</h1>
-                                    <h2 class="heading"><strong>StarTrackr!</strong></h2>
-                                </hgroup>
-                                <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
-                                    <br>Orris
-                                </p>
-                            </header>
-					</div><!-- end-col-12 --
-                </div><!-- end-row --
-            
-            <div class="row">
-                <div class="col-12">
-                    <nav role="navigation" id="nav" class="data">
-                        <input class="trigger" type="checkbox" id="mainNavButton">
-                        <label for="mainNavButton" onclick>Menu</label>
-                        <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./membership.html">Membership</a></li>
-                            <li><a href="./news.html">News</a></li>
-                            <li><a href="./starter-page.html">Specials</a></li>
-					        <li><a href="./index[1].html">Blog</a></li>
-					        <li><a href="./index2.html">Products</a></li>
-							<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> --
-                        </ul>
-                    </nav>
-				</div><!-- end-col-12 --
-            </div><!-- end-row -->
-            <div id="content">
-                <h2>Welcome!</h2>
-                <div id="navigation">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Buy Now!</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Gift Ideas</a></li>
-                    </ul>
-                </div>
-                <p id="intro">
-                    Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!    
-                </p>
+		
+                <div id="content">
+                    <div class="row">
+                        <div class="col-12">
+				            <h2>Welcome!</h2>
+                            <div id="navigation">
+                                <ul>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Buy Now!</a></li>
+                                    <li><a href="#">About Us</a></li>
+                                    <li><a href="#">Gift Ideas</a></li>
+                                </ul>
+                            </div>
+				        </div><!-- end-col-12 -->
+                    </div><!-- end-row -->
+                    <p id="intro">
+                        Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!    
+                    </p>
                 <div class="row">
                         <div class="col-12">
                             <img src="img/kite.png">
