--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -16,7 +16,9 @@
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
-		<link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
+		<link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css"> 
+		
+		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />
 		<!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
