--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -18,19 +18,25 @@
 	    <meta property="og:audio:type" content="audio/mpeg"> 
 		<link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css"> 
 		
-		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />
-		<!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
-        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="js/scripts.js"></script>
-		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
-        <script type=”text/javascript” src=”assets/js/ui.js”></script>
-        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
-        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-		<script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		<<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />
+        <!-- lightbox -->
+        <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./font-awesome.min[1].css">
+		<link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style[1].css">
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+        <link rel="stylesheet" href="./nav[1].css">
+        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./font-awesome.min[1].css">
+        <link rel="icon" type="image/png" href="./weed.jpg">
+        <link rel="icon" type="image/png" href="./flexy-logo.png">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
 		<link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
