--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -97,6 +97,70 @@
     </head>
 
     <body>
+		<div id="container">
+        <div class="row">
+            <div class="col-12">
+                <nav role="navigation" id="nav">
+                    <input class="trigger" type="checkbox" id="mainNavButton">
+                    <label for="mainNavButton" onclick>Menu</label>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index[1].html">About Us</a></li>
+                        <li><a href="membership.html">Products</a></li>
+                        <li><a href="news.html">Blog</a></li>
+                        <li><a href="starter-page.html">Specials</a></li>
+                        <li><a href="index3.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div><!-- col-12 -->
+        </div><!-- end-.row -->
+
+        <div class="wrapper">
+            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+                <h1 id="html5style2h1">StarTrackr!</h1>
+                <div class="col-12">
+                    <img class="logo" src="img/flexy-logo.png">
+                </div><!-- end-col-12 -->
+            </header>
+
+			<br class="clear">
+			
+            <div class="data" id="#html5style2content">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="img/kite.png">
+                        <p id="disclaimer">
+                            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
+                            kind of like people so their privacy should be respected.
+                        </p>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
+				
+				<br class="clear">
+
+				<div class="row">
+                    <div class="çol-12" padding="2%">
+                        <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
+			
+                <br class="clear">
+				
+                <div class="row">
+                    <div class="col-12">
+                        <h2>Welcome!</h2>
+                        <div id="navigation">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Buy Now!</a></li>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Gift Ideas</a></li>
+                            </ul>
+                        </div>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row --
+
+				<br class="clear">
 	    <div class="row">
             <div class="col-12">
                 <nav role="navigation" id="nav">
@@ -156,8 +220,8 @@
             <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
           </div>
 
-        </div><!-- end-col-12 -->
-      </div> <!-- end class row -->
+        </div><!-- end-col-12 --
+      </div> <!-- end class row --
 
       <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
@@ -171,7 +235,7 @@
               <li><a href="#">Gift Ideas</a></li>
             </ul>
           </div>
-
+  -->
           <header class="data" id="gallerypageheader">
             <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2>
