--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -18,7 +18,7 @@
 	    <meta property="og:audio:type" content="audio/mpeg"> 
 		<link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css"> 
 		
-		<<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />
         <!-- lightbox -->
         <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
