--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -12,8 +12,7 @@
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
     <meta property="og:audio:type" content="audio/mpeg">
-    <meta property="og:description"
-        content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+    <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
     <meta property="og:image" content="image.png">
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
@@ -841,8 +840,7 @@
                                             alt=""></a></li>
                             </ul>
                             <ul id="gallerypagecol-3">
-                                <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern"
-                                            title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg"
+                                <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg"
                                             alt=""></a></li>
                                 <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img
                                             class="hid" src="images/felixbig.jpg" alt=""></a></li>
