--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- meta details go here -->
-    <title>Test page-HTML5 expanded section example-ch1-7</title>
+    <title>Test page for semantic tags </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -68,18 +68,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--Add conditional Javascript-->
-    <!--[if lte IE 8]>
-		    <script src="html5.js"></script>
-        <![endif]-->
-</head>
-<!doctype html>
-<html lang=en>
 
-<head>
-    <title>Test page for semantic tags </title>
-    <meta charset=utf-8>
-    <link rel=”stylesheet” type=”text/css” href="HTML5-style-2.css">
+    <link rel=”stylesheet” type=”text/css” href="/HTML5-style-2.css">
     <!--conditional Javascript added-->
     <!--[if lte IE 8]>
 <script src="html5.js">
