--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -17,13 +17,12 @@
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
-    <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
 
     <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />
     <!-- lightbox -->
     <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
@@ -31,7 +30,7 @@
     <link rel="stylesheet" href="./font-awesome.min[1].css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./style[1].css">
-    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    
     <link rel="stylesheet" href="./nav[1].css">
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -69,7 +68,6 @@
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel=”stylesheet” type=”text/css” href="/HTML5-style-2.css">
     <!--conditional Javascript added-->
     <!--[if lte IE 8]>
 <script src="html5.js">
@@ -79,7 +77,7 @@
 
 <body>
     <header><!--<div id="hdr"> changed to <header>-->
-        <h1>Devon's Rural Retreats</h1>
+        <h1>Tourorris's Rural Retreats</h1>
     </header>
     <!--close top section - content area starts -->
     <div id="content">
