--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -85,8 +85,7 @@
         <div id="leftcol">
             <h3>Cottages, converted barns, caravans</h3>
             <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg"
-                width="300"><br>The superb interior
-            of one of our cottages
+                width="300"><br>The superb interior of one of our cottages
         </div>
         <nav><!--use the semantic tag <nav>-->
             <ul><!--start of menu list-->
