--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -70,9 +70,8 @@
 
     <!--conditional Javascript added-->
     <!--[if lte IE 8]>
-<script src="html5.js">
-</script>
-<![endif]-->
+        <script src="html5.js"></script>
+    <![endif]-->
 </head>
 
 <body>
@@ -90,17 +89,15 @@
         <nav><!--use the semantic tag <nav>-->
             <ul><!--start of menu list-->
                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a>
-                </li>
-                <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a>
-                </li>
+                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
                 <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
-                <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
+                <li class="btn"><a href="index3.html" title="Contact us">Contact Us</a></li>
                 <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
             </ul><!--end of menu list-->
         </nav><!--</div> removed and replaced with </nav>-->
         <div id="midcol">
-            <h3>Situated in the UK's beautiful Devon countryside</h3>
+            <h3>Situated in the BDA's beautiful St.Davids countryside</h3>
             <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
         </div>
         <br class="clear">
