--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -34,11 +34,8 @@
     <link rel="stylesheet" href="./font-awesome.min[1].css">
     <link rel="icon" type="image/png" href="./weed.jpg">
     <link rel="icon" type="image/png" href="./flexy-logo.png">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="./font-awesome.min[1].css">
     <link rel="icon" type="image/png" href="./weed.jpg">
     <link rel="icon" type="image/png" href="./flexy-logo.png">
@@ -47,8 +44,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!--Add conditional Javascript-->
