--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -68,6 +68,22 @@
 </head>
 
 <body>
+    <div class="row">
+        <div class="col-12">
+            <nav role="navigation" id="nav">
+                <input class="trigger" type="checkbox" id="mainNavButton">
+                <label for="mainNavButton" onclick>Menu</label>
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./index[1].html">About Us</a></li>
+                    <li><a href="./membership.html">Products</a></li>
+                    <li><a href="./news.html">Blog</a></li>
+                    <li><a href="./starter-page.html">Specials</a></li>
+                    <li><a href="./welcome.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div><!-- col-12 -->
+    </div><!-- end-.row -->
     <header><!--<div id="hdr"> changed to <header>-->
         <h1>Tourorris's Rural Retreats</h1>
     </header>
