--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -19,13 +19,13 @@
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
 
-    <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
     <!-- lightbox -->
     <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="../jQuery-novice-to-ninja/chapter_04/03_jcrop/jquery.Jcrop.css" type="text/css"
-        media="screen" charset="utf-8" />
-    <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/chapter_04/03_jcrop/jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
+	<!--
+    <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
 
     <link rel="stylesheet" href="./font-awesome.min[1].css">
@@ -34,12 +34,15 @@
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="./font-awesome.min[1].css">
+	
     <link rel="icon" type="image/png" href="./weed.jpg">
+	-->
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-
+<!--
     <link rel="stylesheet" href="./font-awesome.min[1].css">
     <link rel="icon" type="image/png" href="./weed.jpg">
+	-->
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
     <!-- Font Awesome Icons -->
@@ -55,11 +58,11 @@
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
     <link rel="author" href="mailto:bakerorris0@gmail.comcom">
-    <link rel="author" type="text/html" href="https://orris0.github.io/">
+    
     <!-- Bootstrap Icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- SimpleLightbox plugin CSS-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
