--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -106,9 +106,9 @@
                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                 <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
-                <li class="btn"><a href="HTML5-Ch1-7.html" title="Local attractions">Attractions</a></li>
+                <li class="btn"><a href="index.html" title="Local attractions">Attractions</a></li>
                 <li class="btn"><a href="index3.html" title="Contact us">Contact Us</a></li>
-                <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
+                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
             </ul><!--end of menu list-->
         </nav><!--</div> removed and replaced with </nav>-->
         <div id="midcol">
