--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -4,7 +4,7 @@
 <head>
     <title>Complete Gallery page</title>
     <meta charset="UTF-8">
-    <link rel = "stylesheet" type = "text/css" href = "gallery-page-HTML5.css">
+    <link rel="stylesheet" type="text/css" href="gallery-page-HTML5.css">
 	<!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
@@ -12,10 +12,12 @@
     <script type="text/javascript" src="js/scripts.js"></script>
     <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+	<!--
 	<link rel="stylesheet" href="./style.css"> 
     <link rel="stylesheet" href="./style[1].css"> 
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link rel="stylesheet" href="./nav[1].css">
+	-->
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
@@ -32,7 +34,7 @@
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 	<link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
         
-    <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> -->
+    <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> --
     <link rel="stylesheet" href="./style[1].css">
     <link rel="stylesheet" href="./nav[1].css">
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
