--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -26,8 +26,8 @@
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
 		
-	<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-	<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+	<link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
+	<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
     <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="./script.js"></script> 
     <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
@@ -44,7 +44,7 @@
           
     <link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
 
-		<!--
+		-->
   
         <link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
         <!-- 01_lightbox --
