--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -4,7 +4,7 @@
 <head>
     <title>Complete Gallery page</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="gallery-page-HTML5.css">
+    <link rel="stylesheet" type="text/css" href="CSS/gallery-page-HTML5.css">
 	<!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
@@ -26,7 +26,7 @@
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
 		
-	<link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
+	<link rel="stylesheet" href="CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
 	<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
     <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="./script.js"></script> 
