--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -12,13 +12,11 @@
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
     <meta property="og:audio:type" content="audio/mpeg">
-    <meta property="og:description"
-        content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+    <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
     <meta property="og:image" content="image.png">
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
-
     <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
     <!-- lightbox -->
     <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
