--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -26,7 +26,7 @@
         <meta property="og:image" content="image.png">
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
-		
+		<link rel="stylesheet" type="text/css" href="CSS/gallery-page-HTML5.css">
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
