--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -37,10 +37,6 @@
 	-->
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<!--
-    <link rel="stylesheet" href="./font-awesome.min[1].css">
-    <link rel="icon" type="image/png" href="./weed.jpg">
-	-->
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
     <!-- Font Awesome Icons -->
@@ -135,7 +131,7 @@
                 <h2 class="heading">Follow Us</h2>
             </div>
         </div>
-        <div class="row" style="background-color: 66d4ff">
+        <div class="row" style="background-color: "66d4ff">
             <div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
                 <div class="form-group">
                     <input class="form-control" type="email" name="subscribe_email"
