--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -131,7 +131,7 @@
                 <h2 class="heading">Follow Us</h2>
             </div>
         </div>
-        <div class="row" style="background-color: "66d4ff">
+        <div class="row" style="background-color: #66d4ff">
             <div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
                 <div class="form-group">
                     <input class="form-control" type="email" name="subscribe_email"
