--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -70,7 +70,7 @@
 <body>
 	<!--
 	
-	-->
+	--
     <div class="row">
         <div class="col-12">
             <nav role="navigation" id="nav">
@@ -85,7 +85,7 @@
                     <li><a href="./welcome.html">Contact</a></li>
                 </ul>
             </nav>
-        </div><!-- col-12 -->
+        </div><!-- col-12 --
     </div><!-- end-.row -->
     <header><!--<div id="hdr"> changed to <header>-->
         <h1>Tourorris's Rural Retreats</h1>
