--- a/starter-page.html
+++ b/starter-page.html
@@ -16,18 +16,17 @@
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
     <link rel="stylesheet" type="text/css" href="CSS/transparent.css">
-    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
+    <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8"> -->
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
     <script src=”js/jquery.mobile-1.0.1.min.js”></script>
     <script type=”text/javascript” src=”assets/js/ui.js”></script>
     <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-        crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
@@ -62,8 +61,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Add conditional Javascript-->
     <!--[if lte IE 8]>
-		    <script src="html5.js"></script>
-        <![endif]-->
+		<script src="html5.js"></script>
+    <![endif]-->
 </head>
 
 <body>
