--- a/starter-page.html
+++ b/starter-page.html
@@ -29,8 +29,8 @@
     <script type="text/javascript" src="/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 
-    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+   <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
+    <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -42,8 +42,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!--Add conditional Javascript-->
@@ -263,7 +262,7 @@
     <script src="../orris0/swiper-bundle.min.js"></script>
     <script src="../orris0/validate.js"></script>
     <!--jQuery JS-->
-    <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+    <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" /> -->
     <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="./js/scripts.js"></script>
     <script src="jquery.innerfade.js" type="text/javascript"></script>
@@ -275,9 +274,8 @@
     <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
     <script src="jquery.innerfade.js" type="text/javascript"></script>
-    <script src="jquery.cycle.all.min.js" type="text/javascript"></script>
-    <!-- Template Main JS File -->
-    <script src="../orris0/main.js"></script>
+    
+    
 </body>
 
 </html>
