--- a/starter-page.html
+++ b/starter-page.html
@@ -33,7 +33,7 @@
     <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
     <link rel="stylesheet" href="./font-awesome.min[1].css">
     <link rel="icon" type="image/png" href="./weed.jpg">
     <link rel="icon" type="image/png" href="./flexy-logo.png">
