--- a/starter-page.html
+++ b/starter-page.html
@@ -30,10 +30,14 @@
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 
    <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
-    <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-    </script>
+    <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style[1].css">
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link rel="stylesheet" href="./nav[1].css">
+    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="./font-awesome.min[1].css">
     <link rel="icon" type="image/png" href="./weed.jpg">
     <link rel="icon" type="image/png" href="./flexy-logo.png">
