--- a/gallery-page- validated.html
+++ b/gallery-page- validated.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- meta details go here -->
-    <title>Home </title>
+    <title>Complete Gallery page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -43,8 +43,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!--Add conditional Javascript-->
@@ -66,6 +65,69 @@
         <script src="html5.js"></script>
     <![endif]-->
 </head>
+<body>
+<header>
+<h1>A full page roll-over gallery of greetings cards</h1>
+<h2>Hover the mouse over a small picture to see an enlarged version</h2>
+</header>
+<nav>
+<ul>
+<li class="btn"><a href="#">Page Two</a></li>
+<li class="btn"><a href="#">Page Three</a></li>
+<li class="btn"><a href="#">Page Four</a></li>
+<li class="btn"><a href="#">Home Page</a></li>
+</ul>
+</nav>
+<div id="rightcol">
+ Secondary information<br><br>
+ <p><a href="http://validator.w3.org/check?uri=referer">
+<img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
+alt="Validated HTML5" title="Validated HTML5"></a>
+</p>
+<p>
+a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88"
+height="31" title="Valid CSS!" alt="Valid CSS!"></a>
+<span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
+</p>
+<br class="clear">
+<p class="advert">Web Design by Fred Bloggs</p></div>
+<div id="midcol">
+<div id="gallery-block">
+<ul id = "col-1">
+<li><a href="#"><img src = "images/alithumb.jpg" alt="Ali" title="Ali">
+<img class = "hid" src = "images/alibig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/catthumb.jpg" alt="Cat" title="Cat">
+ <img class = "hid" src = "images/catbig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/beachthumb.jpg" alt="Beach" title="Beach">
+<img class = "hid" src = "images/beachbig.jpg" alt=""></a></li>
+</ul>
+<ul id = "col-2">
+<li><a href="#"><img src = "images/fernsthumb.jpg" alt="Ferns" title="Ferns">
+<img class = "hid" src = "images/fernsbig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/nicothumb.jpg" alt="Nico" title="Nico">
+ <img class = "hid" src = "images/nicobig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/childbeachthumb.jpg" alt="Child and Beach"
+title="Child and Beach">
+<img class = "hid" src = "images/childbeachbig.jpg" alt=""></a></li>
+</ul>
+<ul id = "col-3">
+<li><a href="#"><img src = "images/ancientthumb.jpg" alt="Ancient and modern"
+title="Ancient and Modern">
+<img class = "hid" src = "images/ancientbig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/felixthumb.jpg" alt="Felix" title="Felix">
+ <img class = "hid" src = "images/felixbig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/cliffthumb.jpg" alt="Cliffs" title="Cliffs">
+<img class = "hid" src = "images/cliffbig.jpg" alt=""></a></li>
+<!-- CHAPTER 2 ■ A ROLLOVER PICTURE GALLERY 51 -->
+</ul><br class="clear">
+</div><!--gallery block closed-->
+</div><!--midcol closed-->
+<footer>
+ Footer goes here
+</footer>
+</body>
+</html>
+
 	<!--
 	<body>
 	
@@ -215,12 +277,12 @@
 </div><!-- end-wrapper --
 	
 </body>
-	-->
+	--
     <body>
     <div class="wrapper">
         <div class="row">
             <div class="col-12">
-                <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
+                <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>--
                     <h1>StarTrackr!</h1>
                     <div id="container">
                         <p>&nbsp;</p>
@@ -247,7 +309,7 @@
                         <p>&nbsp;</p>
                     </div>
                 </header>
-            </div><!-- end col-12 -->
+            </div><!-- end col-12 --
         </div>
     <!-- <body>
         <div class="wrapper">
@@ -284,7 +346,7 @@
         <header>
             <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2> 
-        </header> -->
+        </header> --
 	<nav>
             <ul>
                 <li><a class="active" href="index.html">Home Page</a></li> 
@@ -380,8 +442,8 @@
                         </li>
                     </ul>
                     <br class="clear"> 
-                </div><!--gallery block closed--> 
-            </div><!--midcol closed--> 
+                </div><!--gallery block closed-- 
+            </div><!--midcol closed-- 
 	    <div class="row" style="background-color: #34495e;">
 
                     <div class="col-11">
@@ -389,13 +451,13 @@
 
                         <div class="col-3">
                             <img class="circle" src="img/plane.png" width="95%" ;>
-                        </div> <!-- end col-3 -->
+                        </div> <!-- end col-3 --
 
-                    </div><!-- end class col-11 -->
+                    </div><!-- end class col-11 --
 
-                </div> <!-- end class row --><!-- end class row -->
+                </div> <!-- end class row --><!-- end class row --
 
-                <!-- Vendor JS Files -->
+                <!-- Vendor JS Files --
                 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
                 <script src="../orris0/aos.css"></script>
 
@@ -405,9 +467,9 @@
                 <script src="../orris0/isotope.pkgd.min.js"></script>
                 <script src="../orris0/swiper-bundle.min.js"></script>
                 <script src="../orris0/validate.js"></script>
-                    <!--jQuery JS-->
+                    <!--jQuery JS--
                 <script src="../orris0/js/"></script>
-                    <!-- Template Main JS File -->
+                    <!-- Template Main JS File --
                 <script src="../orris0/main.js"></script>
 
                 <div class="row" style="background-color: #00afe1;">
@@ -470,8 +532,8 @@
 
                                     <hr class="full">
 
-                                </div> <!-- end col-12 -->
-                            </div> <!-- end class row -->
+                                </div> <!-- end col-12 --
+                            </div> <!-- end class row --
 
                             <div class="row" style="background-color: #66d4ff;">
                                 <div class="col-12">
@@ -541,7 +603,7 @@
                                             </div>
 
                                         </div>
-                                </div> <!-- end col-3 -->
+                                </div> <!-- end col-3 --
                                 <div id="container">
                                     <p>&nbsp;</p>
                                     <p>Tour Orris (default)</p>
@@ -655,8 +717,8 @@
                                         <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
                                         <li><a href="#"><i class="instagram"></i></i></a></li>
                                     </ul>
-                                </div> <!-- end col-3 -->
-                            </div> <!-- end class row -->
+                                </div> <!-- end col-3 --
+                            </div> <!-- end class row --
                             <a href="https://orris0.github.io/orris0/index.html"
                                 class="back-to-top d-flex align-items-center justify-content-center"><i
                                     class="bi bi-arrow-up-short"></i></a>
@@ -666,10 +728,10 @@
                                 </div>
                             </div>
                         </footer>
-                    </div><!-- main-content -->
-            </div><!-- end wrapper -->
-        </div><!--end container>-->
-</body><!-- end body  -->
+                    </div><!-- main-content --
+            </div><!-- end wrapper --
+        </div><!--end container>--
+</body><!-- end body  --
 
 </html>
 
