--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -81,11 +81,11 @@
             <div id="rightcol">
             <nav>
                 <ul>
-                    <li><a href="HTML5-Ch1-7.html" title="Accommodation">Accommodation</a></li>
+                    <li><a href="gallery-3col-mix.html" title="Accommodation">Accommodation</a></li>
                     <li><a href="starter-page.html" title="Location Maps">Maps</a></li>
-                    <li><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
-                    <li><a href="index.html" title="Local attractions">Attractions</a></li>
-                    <li><a href="contact.html" title="Contact us">Contact Us</a></li>
+                    <li><a href="gallery-one-col.html" title="Frequently Asked Questions">Information</a></li>
+                    <li><a href="gallery-2col.html" title="Local attractions">Attractions</a></li>
+                    <li><a href="gallery-page-validated.html" title="Contact us">Contact Us</a></li>
                     <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                 </ul> 
             </nav>
