--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -83,7 +83,7 @@
                 <ul>
                     <li><a href="gallery-3col-mix.html" title="Accommodation">Accommodation</a></li>
                     <li><a href="starter-page.html" title="Location Maps">Maps</a></li>
-                    <li><a href="gallery-one-col.html" title="Frequently Asked Questions">Information</a></li>
+                    <li><a href="gallery-page-validated.html" title="Frequently Asked Questions">Information</a></li>
                     <li><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                     <li><a href="index3.html.html" title="Contact us">Contact Us</a></li>
                     <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
