--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -81,7 +81,7 @@
             <div id="rightcol">
             <nav>
                 <ul>
-                    <li><a href="gallery-3col-mix.html" title="Accommodation">Accommodation</a></li>
+                    <li><a href="background-ex7-transp.html" title="Accommodation">Accommodation</a></li>
                     <li><a href="starter-page.html" title="Location Maps">Maps</a></li>
                     <li><a href="gallery-page-validated.html" title="Frequently Asked Questions">Information</a></li>
                     <li><a href="starter-page.html" title="Local attractions">Attractions</a></li>
