--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -1,4 +1,4 @@
-3<!-- Listing 1-7a. The new HTML5 listing (HTML5-Ch1-7.html) -->
+<!-- Listing 1-7a. The new HTML5 listing (HTML5-Ch1-7.html) -->
 <!doctype html>
 <html ng-app lang="en">
 
