--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -69,6 +69,22 @@
 </head>
 
 <body>
+	<div class="row">
+            <div class="col-12">
+                <nav role="navigation" id="nav">
+                    <input class="trigger" type="checkbox" id="mainNavButton">
+                    <label for="mainNavButton" onclick>Menu</label>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./index[1].html">About Us</a></li>
+                        <li><a href="./membership.html">Products</a></li>
+                        <li><a href="./news.html">Blog</a></li>
+                        <li><a href="./starter-page.html">Specials</a></li>
+                        <li><a href="./welcome.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div><!-- col-12 -->
+        </div><!-- end-.row -->
     <header>
         <h1>A full page roll-over gallery of greetings cards</h1>
         <h2>Hover the mouse over a small picture to see an enlarged version</h2>
