--- a/starter-page.html
+++ b/starter-page.html
@@ -131,13 +131,13 @@
             <div id="rightcol">
                 <nav>
                     <ul>
-                        <li><a href="HTML5-Ch1-7.html" title="Accommodation">Accommodation</a></li>
-                        <li><a href="starter-page.html" title="Location Maps">Maps</a></li>
-                        <li><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
-                        <li><a href="attractions.html" title="Local attractions">Attractions</a></li>
-                        <li><a href="contact.html" title="Contact us">Contact Us</a></li>
-                        <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
-                    </ul>
+                    <li><a href="background-ex7-transp.html" title="Accommodation">Accommodation</a></li>
+                    <li><a href="starter-page.html" title="Location Maps">Maps</a></li>
+                    <li><a href="gallery-page-validated.html" title="Frequently Asked Questions">Information</a></li>
+                    <li><a href="index.html" title="Local attractions">Attractions</a></li>
+                    <li><a href="index3.html" title="Contact us">Contact Us</a></li>
+                    <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                </ul>
                 </nav>
             </div><!--end of side menu column-->
             <div id="midcol">
