--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -72,7 +72,7 @@
 <body>
 	<div class="row">
         <div class="col-12">
-            <nav role="navigation" id="nav">
+            <nav role="navigation" id="hnav">
                 <input class="trigger" type="checkbox" id="mainNavButton">
                 <label for="mainNavButton" onclick>Menu</label>
                 <ul>
