--- a/index3.html
+++ b/index3.html
@@ -65,7 +65,7 @@
 <div id="container">
 	<div class="row">
         <div class="col-12">
-            <nav role="navigation" id="nav">
+            <nav role="navigation" id="hnav">
                 <input class="trigger" type="checkbox" id="mainNavButton">
                 <label for="mainNavButton" onclick>Menu</label>
                 <ul>
