--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
-	<link rel="stylesheet" type="text/css" href="horiz-vert-menu.css">
+	<!-- <link rel="stylesheet" type="text/css" href="horiz-vert-menu.css"> -->
     <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
 	 <!-- <link rel="stylesheet" type="text/css" href="CSS/transparent.css"> -->
 
