--- a/index.html
+++ b/index.html
@@ -645,20 +645,20 @@
                         <div class="data" id="gallery-pagemidcol">
                             <div class="data" id="gallery-pagegallery-block">
                                 <ul id="col-1">
-                                    <li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali" /><img
-                                                class="hid" src="images/alibig.jpg" alt="" /></a></li>
-                                    <li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat" /><img
-                                                class="hid" src="images/catbig.jpg" alt="" /></a></li>
-                                    <li><a href="#"><img src="images/beachthumb.jpg" title="Beach" alt="Beach" /><img
-                                                class="hid" src="images/beachbig.jpg" alt="" /></a></li>
+                                    <li><a href="#"><img src="CSS/images/01thumb.jpg" title="Ali" alt="Ali" /><img
+                                                class="hid" src="CSS/images/01thumbig.jpg" alt="" /></a></li>
+                                    <li><a href="#"><img src="CSS/images/02thumb.jpg" title="Cat" alt="Cat" /><img
+                                                class="hid" src="CSS/images/02thumbig.jpg" alt="" /></a></li>
+                                    <li><a href="#"><img src="CSS/images/030thumb.jpg" title="Beach" alt="Beach" /><img
+                                                class="hid" src="CSS/images/030thumbig.jpg" alt="" /></a></li>
                                 </ul>
                                 <ul id="col-2">
-                                    <li><a href="#"><img src="images/fernsthumb.jpg" title="Ferns" alt="Ferns" /><img
-                                                class="hid" src="images/fernsbig.jpg" alt="" /></a></li>
-                                    <li><a href="#"><img src="images/nicothumb.jpg" title="Nico" alt="Nico" /><img
-                                                class="hid" src="images/nicobig.jpg" alt="" /></a></li>
-                                    <li><a href="#"><img src="images/cliffthumb.jpg" title="Cliff" alt="Cliff" /><img
-                                                class="hid" src="images/cliffbig.jpg" alt="" /></a></li>
+                                    <li><a href="#"><img src="CSS/images/031thumb.jpg" title="Ferns" alt="Ferns" /><img
+                                                class="hid" src="CSS/images/031thumbig.jpg" alt="" /></a></li>
+                                    <li><a href="#"><img src="CSS/images/033thumb.jpg" title="Nico" alt="Nico" /><img
+                                                class="hid" src="CSS/images/033thumbig.jpg" alt="" /></a></li>
+                                    <li><a href="#"><img src="CSS/images/034thumb.jpg" title="Cliff" alt="Cliff" /><img
+                                                class="hid" src="CSS/images/034thumbig.jpg" alt="" /></a></li>
                                 </ul>
                                 <br class="clear">
                             </div><!--gallery block closed -->
@@ -808,6 +808,23 @@
 
                             <div class="data" id="gallery-pagemidcol">
                                 <div class="data" id="gallery-pagegallery-block">
+									<!--
+									<ul id="gallerypagecol-1">
+                                        <li><a href="#"><img src="CSS/images/07thumb.jpg" width="70px" height="103px" alt="Ali" title="Ali"><img class="hid" src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/08thumb.jpg" width="69px" height="91px" alt="Cat" title="Cat"><img class="hid" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/09thumb.jpg" width="75px" height="95px" alt="Beach" title="Beach"><img class="hid" src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg" alt=""></a></li>
+                                    </ul>
+                                    <ul id="col-2">
+                                        <li><a href="#"><img src="CSS/images/010thumb.jpg" width="73px" height="103px" alt="Ferns" title="Ferns"><img class="hid" src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/06thumb.jpg" width="74px" height="91px" alt="Nico" title="Nico"><img class="hid" src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg" alt=""></a> </li>
+                                        <li><a href="#"><img src="CSS/images/06thumb.jpg" width="76px" height="59px" alt="Child and Beach" title="Child and Beach"><img class="hid" src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg" alt=""></a></li>
+                                    </ul>
+                                    <ul id="col-3">
+                                        <li><a href="#"><img src="CSS/images/06thumb.jpg" width="83px" height="103px" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="CSS/images/227510028_3759145724186252_5779222621043103914_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/06thumb.jpg" width="80px" height="91px" alt="Felix" title="Felix"><img class="hid" src="CSS/images/227233172_4263928440350817_1594041868801189550_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/06thumb.jpg" width="79px" height="95px" alt="Cliffs" title="Cliffs"><img class="hid" src="CSS/images/222462607_189513929881789_1274985151236699729_n.jpg" alt=""></a></li>
+                                    </ul>
+									-->
                                     <ul id="gallerypagecol-1">
                                         <li><a href="#"><img src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" width="70px" height="103px" alt="Ali" title="Ali"><img class="hid" src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" alt=""></a></li>
                                         <li><a href="#"><img src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg" width="69px" height="91px" alt="Cat" title="Cat"><img class="hid" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg" alt=""></a></li>
