--- a/index.html
+++ b/index.html
@@ -1489,7 +1489,7 @@
             <img id="plane-background" src="./img/plane-background.png" width="935px">
         </div>
     </div>
-</div> <!-- end wrapper -->
+</div> <!-- end container -->
     <br class="clear">
     <footer class="data" id="html5style2footer">
         <div class="footer-inner">
@@ -1646,10 +1646,7 @@
     <script src="jquery.cycle.all.min.js" type="text/javascript"></script>
     <!-- Template Main JS File -->
     <script src="../orris0/main.js"></script>
-    <a href="https://orris0.github.io/orris0/membership.html"
-        class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-    </div><!-- end-container -->
-    </div><!-- end-container -->
+    <a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 </body><!-- end body  -->
 
 </html>
