Comment out row div in gallery-one-col.html

--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -285,7 +285,7 @@ validated.html)
 </head>
     <body>
 		<div id="container">
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-12">
                 <nav role="navigation" id="nav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
@@ -299,7 +299,7 @@ validated.html)
                         <li><a href="welcome.html">Contact</a></li>
                     </ul>
                 </nav>
-            </div><!-- col-12 -->
+            </div><!-- col-12 --
         </div><!-- end-.row -->
 
         <div class="wrapper">
