--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -303,7 +303,7 @@ validated.html)
         </div><!-- end-.row -->
 
         <div class="wrapper">
-            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+            <header><!-- <div id="hdr"> changed to <header> -->
                 <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2>
                 <div class="col-12">
