Fix HTML meta tags and charset attributes

--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -6,9 +6,10 @@ validated.html)
 <!doctype html>
 <html ng-app lang="en">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
         <title>Complete Gallery page</title>
-        <meta charset=utf-8>
+        <meta charset="utf-8">
+		<link rel="stylesheet" href="CSS/gallery-one-col.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" type="text/css" href="CSS/gallery-one-col.css"> 
         <meta name="description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
 		<meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
