Fix stylesheet link for three-column layout

--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -212,7 +212,7 @@ validated.html)
 	    <link rel="stylesheet" type="text/css" href="./CSS/starter-page-style.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/style.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/three-col-no-tables.css">
-	    <link rel="stylesheet" type="text/css" href="./CSS/three-colstyle.css"> -->
+	    <link rel="stylesheet" type="text/css" href="./CSS/three-colstyle.css"> 
 	    <link rel="stylesheet" type="text/css" href="./CSS/transparent.css">
 	    <!-- <link rel="stylesheet" type="text/css" href="./CSS/turquoise.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/two-shadow.css">
