Update header text in gallery-one-col.html

--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -305,11 +305,8 @@ validated.html)
 
         <div class="wrapper">
             <header><!-- <div id="hdr"> changed to <header> -->
-                <h1>A full page roll-over gallery of greetings cards</h1>
-            <h2>Hover the mouse over a small picture to see an enlarged version</h2>
-                <!-- <div class="col-12">
-                    <img class="logo" src="img/flexy-logo.png">
-                </div><!-- end-col-12 -->
+                <h1>A full page roll-over gallery of greetings, cards</h1>
+                <h2>Hover the mouse over a small picture to see an enlarged version</h2>
             </header>
 
 			<br class="clear">
