Comment out row div in index3.html

--- a/index3.html
+++ b/index3.html
@@ -63,7 +63,7 @@
 <body>
 <a id="top"></a>
 <div id="container">
-	<div class="row">
+	<!-- <div class="row">
         <div class="col-12">
             <nav role="navigation" id="hnav">
                 <input class="trigger" type="checkbox" id="mainNavButton">
@@ -77,7 +77,7 @@
                     <li><a href="./welcome.html">Contact</a></li>
                 </ul>
             </nav>
-        </div><!-- col-12 -->
+        </div><!-- col-12 --
     </div><!-- end-.row -->
     <header>
         <h1>THE PARISH OF ST.DAVIDS</h1>
