Update ACOP link to use HTTPS

--- a/index3.html
+++ b/index3.html
@@ -136,7 +136,7 @@
 A
 <p><a href="http://www.abilitypanel.com/index.html"><span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
-<p><a href="http://www.acop.com/Information.aspx<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="https://www.acop.com/Information.aspx<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
 <p><a href="http://www.academicagroup.com/services/market_policy_research/join_consumer_panel<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
