Update footer validation text in index3.html

--- a/index3.html
+++ b/index3.html
@@ -129,7 +129,7 @@
     <br class="clear" />    
     <!-- Footer -->
     <footer class="w3-light-grey">
-		<p><a href="http://www.2020research.com/"><span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+		<p><a href="http://www.2020research.com/"><span class="tiny"><br>SAGO Digital Qualitative</span>
 		
 		
 
