Update footer text for SAGO Digital Qualitative Research

--- a/index3.html
+++ b/index3.html
@@ -127,7 +127,7 @@
     <br class="clear" />    
     <!-- Footer -->
     <footer class="w3-light-grey">
-		<p><a href="http://www.2020research.com/"><span class="tiny"><br>SAGO Digital Qualitative</span>
+		<p><a href="http://www.2020research.com/"><span class="tiny"><br>SAGO Digital Qualitative Research</span><br>
 		
 		
 
