Comment out div.row and fix closing tag

--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -71,7 +71,7 @@
 </head>
 
     <body>
-	    <div class="row">
+	   <!-- <div class="row">
             <div class="col-12">
                 <nav role="navigation" id="hnav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
@@ -85,7 +85,7 @@
                         <li><a href="./welcome.html">Contact</a></li>
 				    </ul>
                 </nav>
-            </div><!-- col-12 -->
+            </div><!-- col-12 --
         </div><!-- end-.row -->
 		
 	    <header>
