Fix HTML validation link and update image tags

--- a/index3.html
+++ b/index3.html
@@ -106,7 +106,7 @@
         <!--start of far right column-->
         <div id="creditcol"><br>
             <img alt="Church logo" title="Church logo" src="images/churchlogo.jpg">
- 		    <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">--></a><img src="../../Apress%20Images%20for%20docs/Ch04%20Rollover%20Navigation%20Menus/images%20for%20docs/HTML5_Logo_64.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">
+ 		    <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a><img src="../../Apress%20Images%20for%20docs/Ch04%20Rollover%20Navigation%20Menus/images%20for%20docs/HTML5_Logo_64.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">
                 <span class="tiny"><br>Validated by the World Wide Web Consortium</span></a></p>
 		    <p><span class="tiny">Website design and production by<br> O Baker Web Design</span></p>
         </div>
