Update footer links and add heading

--- a/index3.html
+++ b/index3.html
@@ -127,14 +127,11 @@
     <br class="clear" />    
     <!-- Footer -->
     <footer class="w3-light-grey">
-		<p><a href="http://www.2020research.com/"><span class="tiny"><br>SAGO Digital Qualitative Research</span><br>
-		
-		
-
-A
+		<p><a href="http://www.2020research.com/"><span class="tiny"><br>SAGO Digital Qualitative Research</span><br>				
+        <h3>A</h3>
 <!-- <p><a href="http://www.abilitypanel.com/index.html"><span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
-<p><a href="https://www.acop.com/Information.aspx<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="https://www.acop.com/Information.aspx<span class="tiny"><br>American Consumer Opinion</span>
 
 <p><a href="http://www.academicagroup.com/services/market_policy_research/join_consumer_panel<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
